# sentimental

early-builder-radar/: .coverage  .pre-commit-config.yaml  README.md  pyproject.toml
early-builder-radar/.github/workflows/: ci.yaml
early-builder-radar/ingest/: __init__.py
early-builder-radar/tests/: test_smoke.py
yc_scraper/: export_checkpoint_to_excel.py  scraper.py  yc_links.csv  yc_links.txt  yc_output.csv  yc_output.csv.ckpt.json  yc_output.xlsx  ~$yc_output.xlsx
