[tool.poetry]
name = "early-builder-radar"
version = "0.1.0"
description = "Internal platform for sourcing early founders via multi-source artifact signals."
authors = ["Early Builder Radar Team <founders@earlybuild.com>"]
readme = "README.md"
packages = [
    { include = "common" },
    { include = "infra" },
    { include = "ingest" },
    { include = "processing" },
    { include = "features" },
    { include = "models" },
    { include = "eval" },
    { include = "ui" },
    { include = "ops" },
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
fasttext-wheel = { version = "^0.9.2", optional = true }
pycld3 = { version = "^0.22", optional = true }

[tool.poetry.extras]
langid = ["fasttext-wheel", "pycld3"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=common --cov=ingest --cov=processing"
testpaths = ["tests"]
